--- a/frontend/src/css/SignupPage.css
+++ b/frontend/src/css/SignupPage.css
@@ -1,10 +1,10 @@
 .signup-background {
-  background-size: cover; /* Scale the background image to cover the entire container */
-  height: 100vh; /* Set the height of the container to 100% of the viewport height */
+  background-size: cover;
+  height: 100vh; 
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: flex-start; /* Center the items horizontally */
+  justify-content: flex-start; 
 }
 
 .signup-top-bar {
@@ -13,8 +13,8 @@
   flex-direction: row;
   width: 100%;
   height: 9%;
-  align-items: center; /* Align items at the start (top) of the container */
-  justify-content: flex-start; /* Center the items horizontally */
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .signup-logo {
@@ -32,7 +32,7 @@
 .signup-cms-title {
   padding-left: 6%;
   font-size: 23px;
-  line-height: 1; /* Set line-height to normal */
+  line-height: 1; 
   margin: 0;
   color: #FFFF;
 }
@@ -112,8 +112,8 @@
 .signup-button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #1E3877; /* Blue color */
-  color: #fff; /* White text color */
+  background-color: #1E3877;
+  color: #fff;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -144,7 +144,7 @@
 .login-redirect {
   font-size: 16px;
   display: inline-block;
-  background-color: transparent; /* Blue color */
+  background-color: transparent;
   color: #1E3877; 
   border: none;
   border-radius: 5px;
