--- a/frontend/src/css/LandingPage.css
+++ b/frontend/src/css/LandingPage.css
@@ -11,10 +11,14 @@
 .landing-title {
   color: #FFFFFF;
   font-size: 40px;
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
 }
 
 .landing-desc {
+  font-family: 'Poppins', sans-serif;
   color: #FFFFFF;
+  font-size: 20px;
 }
 
 .vertical-space {
@@ -23,12 +27,15 @@
 
 .start-button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px 30px;
+  border-radius: 10px;
   background-color: #1E3877; 
+  font-family: 'Poppins', sans-serif;
   color: #fff; 
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 500;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
