--- a/frontend/src/css/LoginPage.css
+++ b/frontend/src/css/LoginPage.css
@@ -64,34 +64,56 @@
 
 .login-header {
   margin-top: 30%;
-  margin-bottom: 12%;
-}
-
-.email-input {
-  font-size: 22px;
-  height: 20%;
-  width: 80%;
   margin-bottom: 6%;
 }
 
+.email-input {
+  font-size: 18px;
+  height: 20%;
+  width: 80%;
+  margin-bottom: 6%;
+  padding: 12px;
+  border-radius: 5px;
+  border: 1px solid #1E3877;
+}
+
+.date_title{
+  font-size: 18px;
+  height: 20%;
+  width: 80%;
+  display: flex;
+}
 .password-input {
-  font-size: 22px;
+  font-size: 18px;
   height: 20%;
   width: 80%;
   margin-bottom: 10%;
+  padding: 12px;
+  border-radius: 5px;
+  border: 1px solid #1E3877;
 }
 
 .login-button {
   display: inline-block;
   padding: 10px 20px;
+  height: 20%;
+  width: 30%;
   background-color: #1E3877; 
   color: #fff; 
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 550;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
+}
+.dont-have-account{
+  font-size: 16px;
+  margin-top: 10%;
+  margin-bottom: 4%;
+  font-family: 'Poppins', sans-serif;
 }
 
 .signup-redirect {
@@ -103,5 +125,8 @@
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 550;
   text-decoration: none;
 }
