--- a/frontend/src/css/SignupPage.css
+++ b/frontend/src/css/SignupPage.css
@@ -55,7 +55,7 @@
 }
 
 .signup-header {
-  margin-top: 15%;
+  margin-top: 8%;
   margin-bottom: 8%;
 }
 
@@ -68,45 +68,63 @@
 }
 
 .first_name {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .last_name {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .email-id-input {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .user-select {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
-  width: 82%;
+  width: 83%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .pw-input {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .pw-conf-input {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
   margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .signup-button {
@@ -123,22 +141,30 @@
 }
 
 .address {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
-  margin-bottom: 2%;
+  margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .dob {
-  font-size: 22px;
+  font-size: 16px;
   height: 20%;
   width: 80%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
+  padding: 8px;
+  border-radius: 5px;
+  border: 0.5px solid #1E3877;
 }
 
 .date_title {
   font-size: 16px;
-  padding-bottom: 2%;
+  height: 20%;
+  width: 80%;
+  margin-bottom: 4%;
 }
 
 .login-redirect {
