--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -118,6 +118,76 @@
     margin-right: 10px; /* Spacing to the right */
     width: 200px; /* Consistent width */
   }
+
+  /* Styles for HomePageParent*/
+  .chart-container {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  }
+
+  .chart-title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .menu-button {
+    position: relative; /* Context for the absolute positioning of the dropdown */
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 0; /* Align to the right if necessary */
+    align-self: flex-start; 
+  }
+  
+  .three-dots-icon {
+    width: 20px; /* Adjust size as needed */
+    height: 5px; /* Adjust size as needed */
+  }
+
+  .menu-content {
+    position: absolute;
+    right: 10px;
+    top: 50px; /* Position below the three dots icon */
+    background-color: white;
+    border: 1px solid #ccc; /* Light grey border */
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Consistent with card shadow */
+    z-index: 10;
+    width: auto; /* Width as needed */
+  }
+  
+  .menu-content button {
+    color: #333; /* Dark grey for readability */
+    padding: 10px 15px; /* Ample padding for touch targets */
+    text-align: left;
+    width: 100%;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #eee; /* Light separator for the last item */
+    cursor: pointer;
+  }
+  
+  .menu-content button:last-child {
+    border-bottom: none; /* Remove border for the last button */
+  }
+  
+  .menu-content button:hover {
+    background-color: #f5f5f5; /* Light grey background on hover */
+  }
+  
+  /* Ensure the modal and overlay stack above the menu */
+  .modal, .overlay {
+    z-index: 20;
+  }
+
   
   @media (max-width: 600px) {
     .courses-container {
