--- a/frontend/src/css/Hamburger.css
+++ b/frontend/src/css/Hamburger.css
@@ -18,10 +18,6 @@
   height: 30px; /* Adjust logo height as needed */
 }
 
-.student-title {
-  padding-left: 800px; /* Add left padding */
-}
-
 .hamburger-icon {
   font-size: 30px;
   cursor: pointer;
@@ -73,12 +69,6 @@
   align-items: center;
 }
 
-.class-group-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
-
 .class-group-table th,
 .class-group-table td {
   border: 1px solid #ddd;
@@ -127,4 +117,129 @@
   max-width: 600px;
   width: 100%;
   margin-top: 0;
+}
+
+.student-content {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 20px 20px 20px 260px;
+}
+
+.student-title {
+  font-size: 22px;
+  padding-left: 2%;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.modal-students {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1050;
+  max-height: 60vh; /* Adjust as needed */
+  width: 80%; /* Adjust width as necessary */
+  border-radius: 8px; /* Rounded corners for the modal */
+}
+
+
+.class-group-table {
+  max-height: 30vh; /* Set a max-height appropriate for your modal size */
+  overflow: auto; /* Enables vertical scrolling */
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+
+.class-group-table th,
+.class-group-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+
+
+.modal-title {
+  width: 100%;
+  text-align: center;
+  padding-bottom: 1%;
+  margin-bottom: 0;
+}
+
+.search-bar {
+  width: 65%;
+  font-size: 22px;
+}
+
+.search-button {
+  margin-left: 2%;
+}
+
+.add-student-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.add-student-table th,
+.add-student-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+button:disabled {
+  opacity: 0.5; /* Reduce opacity for disabled state */
+  background-color: #C0C0C0;
+  cursor: not-allowed; /* Change cursor to indicate that the button is disabled */
+}
+
+.profile-content {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.modal-profile {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1050;
+  max-height: 60vh; /* Adjust as needed */
+  width: 18%; /* Adjust width as necessary */
+  border-radius: 8px; /* Rounded corners for the modal */
+}
+
+.recordings-content {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 20px 20px 20px 260px;
+}
+
+.modal-recordings {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1050;
+  max-height: 60vh; /* Adjust as needed */
+  width: 18%; /* Adjust width as necessary */
+  border-radius: 8px; /* Rounded corners for the modal */
 }
