--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -119,15 +119,16 @@
     width: 200px; /* Consistent width */
   }
 
-  /* Styles for HomePageParent*/
-  .chart-container {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
+  .charts-row {
+    display: flex;
+    justify-content: space-around; /* Adjusts spacing between the charts */
   }
-
+  
+  .chart-container {
+    width: 90%;  /* Set the width as needed */
+    height: 300px; /* Set the height as needed */
+    padding-left: 10%;
+  }
   .chart-title {
     text-align: center;
     margin-bottom: 20px;
