--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -45,7 +45,7 @@
   }
   
   .card-header img {
-    height: 50px; /* Ensure the logo has a fixed height */
+    height: 40px; /* Ensure the logo has a fixed height */
   }
   
   .card-body {
@@ -150,7 +150,8 @@
   
   .three-dots-icon {
     width: 20px; /* Adjust size as needed */
-    height: 5px; /* Adjust size as needed */
+    height: 25px !important;
+    margin-top: 75%;
   }
 
   .menu-content {
