CSS Changes in profile and recording

--- a/frontend/src/css/Hamburger.css
+++ b/frontend/src/css/Hamburger.css
@@ -275,6 +275,11 @@
   /* margin-left: 55%; */
 }
 
-.profile-picture:hover {
+.profile-picture1{
+  height: 70%;
+  width: 2.5%;
+  margin-left: 43%;
+}
+.profile-picture1:hover {
   cursor: pointer;
 }
